@@ -257,7 +257,9 @@ sparseInt.r <- function(rList, do.names = TRUE, forceSparse = FALSE, verbose=FAL
 {
     nl <- length(rList)
     if(forceSparse)
-	F <- function(m) if(is.matrix(m)) .Call(dense_to_Csparse, m) else m
+	F <- function(m)
+            if(is.matrix(m) || is(m, "denseMatrix")) .Call(dense_to_Csparse, m)
+            else m
     if(verbose)
 	cat("sparseInt.r(<list>[1:",nl,"], f.Sp=",forceSparse,"): is.mat()= (",
 	    paste(symnum(vapply(rList, is.matrix, NA)), collapse=""),
@@ -269,6 +271,7 @@ sparseInt.r <- function(rList, do.names = TRUE, forceSparse = FALSE, verbose=FAL
 	r <- rList[[1]]
 	for(j in 2:nl)
 	    r <- sparse2int(r, rList[[j]],
+                            forceSparse=forceSparse,
 			    do.names=do.names, verbose=verbose)
 	if(forceSparse) F(r) else r
     }
@@ -307,7 +310,8 @@ is.model.frame <- function(x)
 ##' @return sparse matrix (class "dgCMatrix")
 ##' @author Martin Maechler
 model.spmatrix <- function(trms, mf, transpose=FALSE,
-			   drop.unused.levels = FALSE, row.names=TRUE, sep="", verbose=FALSE)
+			   drop.unused.levels = FALSE, row.names=TRUE, sep="",
+                           verbose=FALSE)
 {
     ## Author: Martin Maechler, Date:  7 Jul 2009
 
